--- a/src/main/resources/templates/productos/create.html
+++ b/src/main/resources/templates/productos/create.html
@@ -93,6 +93,8 @@
 </div>
 
 <!-- /.container -->
+
+<!-- Footer -->
 <div th:include="administrador/template_admin.html::footer"></div>
 
 <!-- Bootstrap core JavaScript -->
