--- a/src/main/resources/templates/usuario/resumenorden.html
+++ b/src/main/resources/templates/usuario/resumenorden.html
@@ -75,7 +75,7 @@
               <li class="list-group-item">
                 <h5 th:text="'Total: ' + ${orden.total}">Total:</h5>
               </li>
-              <a href="#" class="btn btn-dark mt-3">Generar</a>
+              <a th:href="@{saveOrder}" class="btn btn-dark mt-3">Generar</a>
             </ul>
           </div>
 
