--- a/src/main/resources/templates/usuario/template_usuario.html
+++ b/src/main/resources/templates/usuario/template_usuario.html
@@ -1,72 +1,69 @@
-<!DOCTYPE html>
-<html lang="es" xmlns:th="http://www.thymeleaf.org">
+<!-- Fragmentos para header, header-user y footer -->
 
-<head>
+<!-- Header para usuarios no logueados -->
+<div th:fragment="header">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
 
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-	<meta name="description" content="">
-	<meta name="author" content="">
+      <form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
+        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"
+          name="nombre" autocomplete="off">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+      </form>
 
-	<title>Spring eCommerce</title>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item"><a class="nav-link" th:href="@{/getCart}">Carrito</a></li>
+          <li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}">Login</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
 
-	<!-- Bootstrap core CSS -->
-	<link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
+<!-- Header para usuarios logueados -->
+<div th:fragment="header-user">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+    <div class="container">
+      <a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
 
-	<!-- Custom styles for this template -->
-	<link th:href="@{css/heroic-features.css}" rel="stylesheet">
+      <form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
+        <input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"
+          name="nombre" autocomplete="off">
+        <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
+      </form>
 
-</head>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
+        aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
 
-<body>
+      <div class="collapse navbar-collapse" id="navbarResponsive">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+              data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">USER</a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" th:href="@{/getCart}">Carrito</a>
+            </div>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</div>
 
-	<!-- Navigation -->
-	<div th:fragment="header">
-		<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
-			<div class="container">
-				<a class="navbar-brand" th:href="@{/}">Spring eCommerce</a>
-
-				<form class="form-inline my-2 my-lg-0" method="post" th:action="@{/search}">
-					<input class="form-control mr-sm-2" type="search" placeholder="Buscar" aria-label="Search"
-						name="nombre" autocomplete="off">
-					<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-				</form>
-
-
-				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive"
-					aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
-					<span class="navbar-toggler-icon"></span>
-				</button>
-				<div class="collapse navbar-collapse" id="navbarResponsive">
-					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" th:href="@{/getCart}">Carrito</a></li>
-						<li class="nav-item"><a class="nav-link" th:href="@{/usuario/login}">Login</a></li>
-					</ul>
-				</div>
-			</div>
-		</nav>
-	</div>
-
-
-
-
-
-	<!-- Footer -->
-	<div th:fragment="footer">
-		<footer class="py-5 bg-dark">
-			<div class="container">
-				<p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
-			</div>
-			<!-- /.container -->
-		</footer>
-	</div>
-
-
-	<!-- Bootstrap core JavaScript -->
-	<script th:src="@{vendor/jquery/jquery.min.js}"></script>
-	<script th:src="@{vendor/bootstrap/js/bootstrap.bundle.min.js}"></script>
-
-</body>
-
-</html>
+<!-- Footer -->
+<div th:fragment="footer">
+  <footer class="py-5 bg-dark">
+    <div class="container">
+      <p class="m-0 text-center text-white">Copyright &copy; Spring eCommerce 2021</p>
+    </div>
+  </footer>
+</div>
