--- a/src/main/resources/templates/administrador/template_admin.html
+++ b/src/main/resources/templates/administrador/template_admin.html
@@ -2,7 +2,7 @@
   <div th:fragment="header">
 	<nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
 	    <div class="container">
-	      <a class="navbar-brand" th:href="@{/administrador}">Spring eCommerce</a>
+	      <a class="navbar-brand" th:href="@{/administrador}">Comercio Digital</a>
 
 	      <form class="form-inline my-2 my-lg-0" method="post"
 	      action="#">
@@ -26,6 +26,7 @@
 					<div class="dropdown-menu"
 						aria-labelledby="navbarDropdownMenuLink">
 						<a class="dropdown-item" th:href="@{/productos}">Productos</a>
+						<a class="dropdown-item" th:href="@{/administrador/usuarios}">Usuarios</a>
 						<a class="dropdown-item" th:href="@{/usuario/cerrar}">Salir</a>
 					</div></li>
 	          </ul>
