--- a/src/main/resources/templates/usuario/home.html
+++ b/src/main/resources/templates/usuario/home.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <meta name="description" content="">
   <meta name="author" content="">
-  <title>Spring eCommerce</title>
+  <title>Comercio Digital</title>
 
   <!-- Bootstrap core CSS -->
   <link th:href="@{vendor/bootstrap/css/bootstrap.min.css}" rel="stylesheet">
